--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -12,12 +10,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="332dp"
-            android:background="#ff83fffa"></RelativeLayout>
+            android:layout_height="wrap_content"
+            android:background="#ff83fffa"
+            android:layout_weight="1"></RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ff5279ff"></RelativeLayout>
+            android:layout_height="0dp"
+            android:background="#ff5279ff"
+            android:layout_weight="1"></RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
