--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,137 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ff83fffa"
-            android:layout_weight="1"></RelativeLayout>
-
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#ff5279ff"
-            android:layout_weight="1"></RelativeLayout>
+            android:layout_weight="1"
+            android:background="#ff88faff">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="#ff8afffd"
+                android:layout_weight="2">
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:text="^"
+                    android:id="@+id/volumeUp"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:textSize="100dp" />
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:text="v"
+                    android:id="@+id/volumeDown"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:textSize="60dp" />
+            </LinearLayout>
+
+            <ProgressBar
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:id="@+id/progressBar"
+                android:layout_weight="1"
+                android:layout_margin="10dp" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:layout_margin="10dp">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:text="Station"
+                    android:id="@+id/textView"
+                    android:layout_weight="2"
+                    android:textSize="100dp"
+                    android:textAlignment="center"
+                    android:background="#ff000000"
+                    android:textColor="#ffffffff" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:text="AM/FM"
+                        android:id="@+id/amfm"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:text="1"
+                        android:id="@+id/preset1"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:text="2"
+                        android:id="@+id/preset2"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:text="3"
+                        android:id="@+id/preset3"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:text="4"
+                        android:id="@+id/preset4"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:layout_margin="10dp">
+
+                <ToggleButton
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Button"
+                    android:id="@+id/powerButton"
+                    android:layout_weight="1" />
+
+                <SeekBar
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBar"
+                    style="@android:style/Widget.DeviceDefault.SeekBar"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#ff2d5eff"></LinearLayout>
     </LinearLayout>
 </RelativeLayout>
