--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                     android:textSize="60dp" />
             </LinearLayout>
 
-            <ProgressBar
+            <SeekBar
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:id="@+id/progressBar"
@@ -139,6 +139,76 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#ff2d5eff"></LinearLayout>
+            android:background="#ff2d5eff">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text="&lt;&lt;"
+                    android:id="@+id/repeat"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text=""
+                    android:id="@+id/stop"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text="|>"
+                    android:id="@+id/play"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text="||"
+                    android:id="@+id/pause"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text=">>"
+                    android:id="@+id/button6"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text="^"
+                    android:id="@+id/button"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textSize="80dp" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:id="@+id/imageView"
+                android:layout_margin="10dp"
+                android:background="@mipmap/ic_launcher"
+                android:layout_weight="1.34" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
